renamed functions and variables to be applicable to compliments

--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
   <h1>Rare Compliment Generator</h1>
   <p>(because we all need to feel better sometimes)</p>
   <div class="container">
-    <div id="adjective" class="word">Your</div>
-    <div id="swear" class="word">compliment</div>
+    <div id="adjective1" class="word">Your</div>
+    <div id="adjective2" class="word">compliment</div>
     <div id="noun" class="word">here</div>
     <div class="btn-container">
-      <button id="insult" onclick="randomInsult(event)">Give Some Love</button>
-      <!-- <button class="SFW" onclick="useAltSwear()">Mom's watching</button> -->
+      <button id="compliment" onclick="randomCompliment(event)">Give Some Love</button>
     </div>
   </div>
 
